fix(forms): ensure Field.Number with showStepControls can stretch when defined (#3648)

--- a/packages/dnb-eufemia/src/extensions/forms/Field/Number/style/dnb-number.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/Field/Number/style/dnb-number.scss
@@ -127,5 +127,16 @@
         width: var(--number-control-button-width--large);
       }
     }
+    &--has-controls.dnb-forms-field-block__contents--width-stretch {
+      .dnb-button--control-before,
+      .dnb-button--control-after {
+        width: var(--number-control-button-width--large);
+      }
+
+      /* stylelint-disable-next-line no-descending-specificity */
+      .dnb-input__border {
+        flex-grow: 1;
+      }
+    }
   }
 }
